# docs/swagger.json
@@ -598,6 +598,7 @@
             "required": [
                 "email",
                 "name",
+                "password",
                 "role"
             ],
             "properties": {
@@ -607,11 +608,15 @@
                 "name": {
                     "type": "string"
                 },
+                "password": {
+                    "type": "string"
+                },
                 "role": {
                     "type": "string",
                     "enum": [
-                        "user",
-                        "user-assistant"
+                        "admin",
+                        "bride",
+                        "event_organizer"
                     ]
                 }
             }
